Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78705

No position updates occur if not permitted at startup on iOS, even if permissions change later

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15.8, 6.3.0 Alpha
    • 5.12.2
    • Positioning
    • None
    • iOS 12
    • iOS/tvOS/watchOS
    • 5
    • 0fe43dd0722b0aca86bdbb11f621cf12da8a5fb7 (qt/qtpositioning/dev) 45ff6ea68b3d0d510a279f6512cd4b8fc352c729 (qt/tqtc-qtlocation/5.15)
    • Team 2 Foundation_Sprint 44, Team 2 Foundation_Sprint 45, Team 2 Foundation_Sprint 46

      After create the position source (corelocation) with QGeoPositionSourceInfo and start the position updates, if the service location is not activated on the device then the dialog to activate it not appears and an error is emitted (QGeoPositionInfoSource::AccessError). The position is never retrieved even if I turn on the location service after.

      If I start the position updates with the location service activated then I receive the position correctly.

      Moreover if I turn off the location service manually after the updates start, then the dialog to reactivate it appears and the position are still received when the service is reactivated. 

        1. test_location.zip
          3 kB
          Benjamin Senegas
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            oyheskes Øystein Heskestad
            benjamin.senegas Benjamin Senegas
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes