Fix positioning must be enabled and authorized at startup to work on iOS

Positioning updates were never starting on iOS if startUpdates was
called when positioning was not enabled and authorized.
Also removed call to authorizationStatus, with is deprecated and the
replacement is too new to be used.

[ChangeLog] Fix positioning must be enabled and authorized on startup to work on iOS

Fixes: QTBUG-78705
Fixes: QTBUG-92261
Pick-to: 5.15
Change-Id: Id0c6c6491edd2a55dd47627b4c99984764bca983
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>